--- a/Controls/TextTab/TabEndItem.xaml
+++ b/Controls/TextTab/TabEndItem.xaml
@@ -8,10 +8,9 @@
             <ColumnDefinition Width="40"/>
             <ColumnDefinition Width="Auto" SharedSizeGroup="NextName"/>
             <ColumnDefinition Width="40"/>
-            <ColumnDefinition Width="40"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Border Grid.ColumnSpan="6" Background="{DynamicResource BaseBrush}"
+        <Border Grid.ColumnSpan="5" Background="{DynamicResource BaseBrush}"
                 BorderThickness="0,1,0,1" BorderBrush="{DynamicResource ThemeBrush}"/>
         <TextBlock x:Name="answerTxt" Grid.Column="0" Margin="4,2,4,2"
                    Foreground="{DynamicResource Foreground.BaseBrush}"
@@ -22,10 +21,7 @@
                    Foreground="{DynamicResource Foreground.BaseBrush}"
                    HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Button x:Name="nextBtn" Grid.Column="3" ToolTip="转到相应节点" Tag="f"
-                Click="nextBtn_Click" Template="{DynamicResource generalButtonTemplate}"
+                Click="NextBtn_Click" Template="{DynamicResource generalButtonTemplate}"
                 Content="M0,0 0,8 6,4Z"/>
-        <Button x:Name="changeBtn" Grid.Column="4" ToolTip="回首页编辑"
-                Click="changeBtn_Click" Template="{DynamicResource generalButtonTemplate}"
-                Content="M4,0 8,0 8,6 L0,6 M1,0 L1,3"/>
     </Grid>
 </UserControl>
