--- a/Resources/Dictionary.xaml
+++ b/Resources/Dictionary.xaml
@@ -615,16 +615,18 @@
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="20"/>
+                <ColumnDefinition Width="40"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <CheckBox x:Name="showHideBtn" IsChecked="False"
                       Template="{DynamicResource upDownCheckBoxTemplate}"
                       HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <TextBlock x:Name="questionTxt" Grid.Column="1" Margin="8,0,0,0"
+            <Button x:Name="backBtn" Grid.Column="1" Content="返回" Width="40"/>
+            <TextBlock x:Name="questionTxt" Grid.Column="2" Margin="8,0,0,0"
                        Foreground="{DynamicResource Foreground.ThemeBrush}"
                        VerticalAlignment="Center"/>
-            <ScrollViewer x:Name="sv" Grid.Row="1" Height="0" Grid.ColumnSpan="3"
+            <ScrollViewer x:Name="sv" Grid.Row="1" Height="0" Grid.ColumnSpan="4"
                           Background="{DynamicResource BaseBrush}"
                           FocusVisualStyle="{x:Null}"
                           HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
