--- a/Resources/WindowResources.xaml
+++ b/Resources/WindowResources.xaml
@@ -232,9 +232,12 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <StackPanel Orientation="Vertical" Grid.Column="0" Margin="6">
-                        <CheckBox x:Name="darkModeBtn" Content="深色模式"
+                        <CheckBox Content="深色模式"
                                   IsChecked="{Binding IsDarkMode}"
                                   Template="{StaticResource settingCheckBox}"/>
+                        <CheckBox Content="连续回车切割片段"
+                                  IsChecked="{Binding AllowDoubleEnter}"
+                                  Template="{StaticResource settingCheckBox}"/>                    
                         <Slider x:Name="colorR" Style="{StaticResource colorSliderStyle}"
                                 Foreground="#FFFF0000" Value="{Binding ColorR}"/>
                         <Slider x:Name="colorG" Style="{StaticResource colorSliderStyle}" 
