--- a/Resources/Dictionary.xaml
+++ b/Resources/Dictionary.xaml
@@ -14,7 +14,10 @@
     <SolidColorBrush x:Key="ThemeBrush" Color="#FFEEAA16"/>
     <SolidColorBrush x:Key="Highlight.ThemeBrush" Color="#80FFFFFF"/>
     <SolidColorBrush x:Key="RedBrush" Color="#FFD44C45"/>
-    
+    <SolidColorBrush x:Key="Fragment.BorderBrush" Color="#BB64FFBE"/>
+    <SolidColorBrush x:Key="Fragment.Background" Color="#4464FFBE"/>
+
+
     <!--转换器-->
     <cvt:NumberToPercentStrConverter x:Key="numToPerCvt" />
     <cvt:ListToBoolConverter x:Key="listToBoolCvt"/>
@@ -43,37 +46,56 @@
     <!-- TopLevelHeader -->
     <ControlTemplate x:Key="{x:Static MenuItem.TopLevelHeaderTemplateKey}"
                      TargetType="{x:Type MenuItem}">
-        <Border x:Name="Border" BorderThickness="1" Background="Transparent">
-            <Grid>
-                <ContentPresenter Margin="10,2,10,2"
-                                  ContentSource="Header"
-                                  RecognizesAccessKey="True" />
-                <Popup x:Name="Popup"
-                       Placement="Bottom"
-                       IsOpen="{TemplateBinding IsSubmenuOpen}"
-                       AllowsTransparency="True"
-                       Focusable="False"
-                       PopupAnimation="Fade">
-                    <Border x:Name="SubmenuBorder"
-                            SnapsToDevicePixels="True"
-                            BorderThickness="1"
-                            Background="{DynamicResource NodeBgBrush}"
-                            BorderBrush="{DynamicResource ThemeBrush}">
-                        <ScrollViewer CanContentScroll="True" VerticalScrollBarVisibility="Auto">
-                            <StackPanel IsItemsHost="True"
-                                        KeyboardNavigation.DirectionalNavigation="Cycle" />
-                        </ScrollViewer>
-                    </Border>
-                </Popup>
-            </Grid>
-        </Border>
+        <Grid Width="{Binding Height, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Menu}}}"
+              Height="{Binding Height, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Menu}}}">
+            <Border x:Name="BD" CornerRadius="4" Margin="2" BorderThickness="1" 
+                    HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                    Background="Transparent" BorderBrush="Transparent">
+                <Path x:Name="CP" Stroke="{DynamicResource Foreground.BaseBrush}"
+                      HorizontalAlignment="Center" StrokeThickness="1"
+                      VerticalAlignment="Center"
+                      Data="{Binding Header, 
+                    RelativeSource={RelativeSource TemplatedParent}}" >
+                </Path>
+            </Border>
+            <Popup x:Name="Popup" Placement="Bottom"
+                   IsOpen="{TemplateBinding IsSubmenuOpen}"
+                   AllowsTransparency="True"
+                   Focusable="False"
+                   PopupAnimation="Fade">
+                <Border x:Name="SubmenuBorder"
+                        SnapsToDevicePixels="True"
+                        BorderThickness="1"
+                        Background="{DynamicResource NodeBgBrush}"
+                        BorderBrush="{DynamicResource ThemeBrush}">
+                    <ScrollViewer CanContentScroll="True" VerticalScrollBarVisibility="Auto">
+                        <StackPanel IsItemsHost="True"
+                                    KeyboardNavigation.DirectionalNavigation="Cycle" />
+                    </ScrollViewer>
+                </Border>
+            </Popup>
+        </Grid>
         <ControlTemplate.Triggers>
             <Trigger Property="IsHighlighted" Value="true">
-                <Setter Property="BorderBrush" Value="{DynamicResource ThemeBrush}" TargetName="Border"/>
-                <Setter Property="Background" Value="{DynamicResource NodeBgHBrush}" TargetName="Border"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource ThemeBrush}" TargetName="BD"/>
+                <Setter Property="Background" Value="{DynamicResource Highlight.BaseBrush}" TargetName="BD"/>
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Foreground" Value="{DynamicResource MiddleBrush}"/>
+                <Setter Property="Stroke" Value="{DynamicResource MiddleBrush}" TargetName="CP"/>
+            </Trigger>
+            <Trigger Property="IsPressed" Value="True">
+                <Setter Property="BorderBrush" Value="{DynamicResource ThemeBrush}" TargetName="BD"/>
+                <Setter Property="Background" TargetName="BD">
+                    <Setter.Value>
+                        <RadialGradientBrush>
+                            <GradientStop Color="{DynamicResource Base}" Offset="0.4"/>
+                            <GradientStop Color="{DynamicResource Theme}" Offset="1"/>
+                        </RadialGradientBrush>
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+            <Trigger Property="Tag" Value="f">
+                <Setter Property="Fill" TargetName="CP" Value="{DynamicResource Foreground.BaseBrush}"/>
             </Trigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
@@ -81,18 +103,37 @@
     <!-- TopLevelItem -->
     <ControlTemplate x:Key="{x:Static MenuItem.TopLevelItemTemplateKey}"
                  TargetType="{x:Type MenuItem}">
-        <Border x:Name="Border" BorderThickness="1" Background="Transparent">
-            <ContentPresenter Margin="10,2,10,2"
-                              ContentSource="Header"
-                              RecognizesAccessKey="True" />
+        <Border x:Name="BD" CornerRadius="4" Margin="2" BorderThickness="1" 
+                    HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                    Background="Transparent" BorderBrush="Transparent">
+            <Path x:Name="CP" Stroke="{DynamicResource Foreground.BaseBrush}"
+                      HorizontalAlignment="Center" StrokeThickness="1"
+                      VerticalAlignment="Center"
+                      Data="{Binding Header, 
+                    RelativeSource={RelativeSource TemplatedParent}}" >
+            </Path>
         </Border>
         <ControlTemplate.Triggers>
             <Trigger Property="IsHighlighted" Value="true">
-                <Setter Property="BorderBrush" Value="{DynamicResource ThemeBrush}" TargetName="Border"/>
-                <Setter Property="Background" Value="{DynamicResource NodeBgHBrush}" TargetName="Border"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource ThemeBrush}" TargetName="BD"/>
+                <Setter Property="Background" Value="{DynamicResource Highlight.BaseBrush}" TargetName="BD"/>
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Foreground" Value="{DynamicResource MiddleBrush}"/>
+                <Setter Property="Stroke" Value="{DynamicResource MiddleBrush}" TargetName="CP"/>
+            </Trigger>
+            <Trigger Property="IsPressed" Value="True">
+                <Setter Property="BorderBrush" Value="{DynamicResource ThemeBrush}" TargetName="BD"/>
+                <Setter Property="Background" TargetName="BD">
+                    <Setter.Value>
+                        <RadialGradientBrush>
+                            <GradientStop Color="{DynamicResource Base}" Offset="0.4"/>
+                            <GradientStop Color="{DynamicResource Theme}" Offset="1"/>
+                        </RadialGradientBrush>
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+            <Trigger Property="Tag" Value="f">
+                <Setter Property="Fill" TargetName="CP" Value="{DynamicResource Foreground.BaseBrush}"/>
             </Trigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
@@ -162,7 +203,6 @@
     </ControlTemplate>
     <!-- MenuItem Style -->
     <Style TargetType="{x:Type MenuItem}">
-        <Setter Property="MinWidth" Value="100"/>
         <Setter Property="Foreground" Value="{DynamicResource Foreground.BaseBrush}"/>
         <Setter Property="OverridesDefaultStyle" Value="True" />
         <Style.Triggers>
@@ -177,10 +217,12 @@
                         Value="{DynamicResource {x:Static MenuItem.TopLevelItemTemplateKey}}" />
             </Trigger>
             <Trigger Property="Role" Value="SubmenuHeader">
+                <Setter Property="MinWidth" Value="100"/>
                 <Setter Property="Template"
                         Value="{DynamicResource {x:Static MenuItem.SubmenuHeaderTemplateKey}}" />
             </Trigger>
             <Trigger Property="Role" Value="SubmenuItem">
+                <Setter Property="MinWidth" Value="100"/>
                 <Setter Property="Template"
                         Value="{DynamicResource {x:Static MenuItem.SubmenuItemTemplateKey}}" />
             </Trigger>
@@ -421,6 +463,29 @@
             </Trigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
+    <!--文字按钮模板-->
+    <ControlTemplate x:Key="textButtonTemplate" TargetType="{x:Type Button}">
+        <Border x:Name="BD" Height="Auto" Width="Auto" Background="Transparent">
+            <ContentPresenter x:Name="CP" Margin="2,0,2,0"
+                              TextElement.Foreground="{DynamicResource Foreground.ThemeBrush}"
+                              HorizontalAlignment="Center"
+                              VerticalAlignment="Center">
+            </ContentPresenter>
+        </Border>
+        <ControlTemplate.Triggers>
+            <MultiTrigger>
+                <MultiTrigger.Conditions>
+                    <Condition Property="IsPressed" Value="False"/>
+                    <Condition Property="IsMouseOver" Value="True"/>
+                </MultiTrigger.Conditions>
+                <Setter Property="Background" Value="{DynamicResource Highlight.ThemeBrush}" TargetName="BD"/>
+            </MultiTrigger>
+            <Trigger Property="IsPressed" Value="True">
+                <Setter Property="Background" Value="{DynamicResource Highlight.ThemeBrush}" TargetName="BD"/>
+                <Setter Property="Opacity" Value="0.8" TargetName="BD"/>
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
     <!--通用按钮style-->
     <Style x:Key="generalButtonStyle" TargetType="{x:Type Button}">
         <Setter Property="Template" Value="{DynamicResource generalButtonTemplate}"/>
@@ -477,7 +542,7 @@
     <ControlTemplate x:Key="TabItemCloseBtnTemplate" TargetType="{x:Type Button}">
         <Border x:Name="BD" Width="16" Height="16" CornerRadius="8"
                 Background="Transparent">
-            <Path x:Name="CP" Stroke="White" StrokeThickness="1" Data="M4,4 L12,12 M4,12 L12,4"/>
+            <Path x:Name="CP" Stroke="{DynamicResource BaseBrush}" StrokeThickness="1" Data="M4,4 L12,12 M4,12 L12,4"/>
         </Border>
         <ControlTemplate.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
@@ -488,7 +553,7 @@
                     <Condition Property="Uid" Value="1"/>
                     <Condition Property="IsMouseOver" Value="False"/>
                 </MultiTrigger.Conditions>
-                <Setter Property="Stroke" Value="Black" TargetName="CP"/>
+                <Setter Property="Stroke" Value="{DynamicResource Text.Foreground.BaseBrush}" TargetName="CP"/>
             </MultiTrigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
@@ -615,14 +680,15 @@
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="20"/>
-                <ColumnDefinition Width="40"/>
+                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <CheckBox x:Name="showHideBtn" IsChecked="False"
                       Template="{DynamicResource upDownCheckBoxTemplate}"
                       HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <Button x:Name="backBtn" Grid.Column="1" Content="返回" Width="40"/>
+            <Button x:Name="backBtn" Grid.Column="1" Content="返回节点图" 
+                    Template="{StaticResource textButtonTemplate}"/>
             <TextBlock x:Name="questionTxt" Grid.Column="2" Margin="8,0,0,0"
                        Foreground="{DynamicResource Foreground.ThemeBrush}"
                        VerticalAlignment="Center"/>
@@ -692,7 +758,7 @@
     <!--operationTextBox的模板-->
     <ControlTemplate x:Key="operationTextBoxTemplate" TargetType="{x:Type TextBox}">
         <Border x:Name="BD" Background="#60808080" Margin="20,0,120,0"
-                BorderThickness="1" BorderBrush="#8024DD24">
+                BorderThickness="1" BorderBrush="{StaticResource Fragment.Background}">
             <ScrollViewer Margin="0" x:Name="PART_ContentHost"/>
         </Border>
         <ControlTemplate.Triggers>
@@ -704,7 +770,7 @@
                 <Setter Property="BorderBrush" Value="Transparent" TargetName="BD"/>
             </MultiTrigger>
             <Trigger Property="IsFocused" Value="True">
-                <Setter Property="BorderBrush" Value="#FF24DD24" TargetName="BD"/>
+                <Setter Property="BorderBrush" Value="{StaticResource Fragment.BorderBrush}" TargetName="BD"/>
             </Trigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
@@ -716,15 +782,15 @@
         </Border>
         <ControlTemplate.Triggers>
             <Trigger Property="IsFocused" Value="True">
-                <Setter Property="Background" Value="#5064FFBE" TargetName="BD"/>
-                <Setter Property="BorderBrush" Value="#AA64FFBE" TargetName="BD"/>
+                <Setter Property="Background" Value="{StaticResource Fragment.Background}" TargetName="BD"/>
+                <Setter Property="BorderBrush" Value="{StaticResource Fragment.BorderBrush}" TargetName="BD"/>
             </Trigger>
             <MultiTrigger>
                 <MultiTrigger.Conditions>
                     <Condition Property="IsFocused" Value="False"/>
                     <Condition Property="IsMouseOver" Value="True"/>
                 </MultiTrigger.Conditions>
-                <Setter Property="BorderBrush" Value="#AA64FFBE" TargetName="BD"/>
+                <Setter Property="BorderBrush" Value="{StaticResource Fragment.BorderBrush}" TargetName="BD"/>
             </MultiTrigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
