--- a/Resources/WindowResources.xaml
+++ b/Resources/WindowResources.xaml
@@ -241,13 +241,22 @@
                                   Template="{StaticResource settingCheckBox}"/>
                         <CheckBox Content="连续回车切割片段"
                                   IsChecked="{Binding AllowDoubleEnter}"
-                                  Template="{StaticResource settingCheckBox}"/>                    
-                        <Slider x:Name="colorR" Style="{StaticResource colorSliderStyle}"
-                                Foreground="#FFFF0000" Value="{Binding ColorR}"/>
-                        <Slider x:Name="colorG" Style="{StaticResource colorSliderStyle}" 
-                                Foreground="#FF00FF00" Value="{Binding ColorG}"/>
-                        <Slider x:Name="colorB" Style="{StaticResource colorSliderStyle}" 
-                                Foreground="#FF0000FF" Value="{Binding ColorB}"/>
+                                  Template="{StaticResource settingCheckBox}"/>
+                        <StackPanel Orientation="Vertical" Margin="2"
+                                    Background="{DynamicResource BaseBrush}">
+                            <TextBlock Text="颜色设置" Margin="4,4,0,0" Foreground="{DynamicResource Foreground.BaseBrush}"/>
+                            <Slider x:Name="colorR" Style="{StaticResource colorSliderStyle}"
+                                    Foreground="#FFFF0000" Value="{Binding ColorR}"/>
+                            <Slider x:Name="colorG" Style="{StaticResource colorSliderStyle}" 
+                                    Foreground="#FF00FF00" Value="{Binding ColorG}"/>
+                            <Slider x:Name="colorB" Style="{StaticResource colorSliderStyle}" 
+                                    Foreground="#FF0000FF" Value="{Binding ColorB}"/>
+                        </StackPanel>
+                        <Button Content="还原默认" Command="{Binding ToDefaultCommand}"
+                                Template="{StaticResource textButtonTemplate}"
+                                Height="24" Margin="2"
+                                HorizontalAlignment="Left"
+                                />
                     </StackPanel>
                 </Grid>
                 <Border x:Name="UpperBd" Grid.Row="2" IsHitTestVisible="False"
