--- a/Controls/TextTab/TextFragmentPresenter.xaml
+++ b/Controls/TextTab/TextFragmentPresenter.xaml
@@ -9,6 +9,7 @@
         <TextBox x:Name="opContainer" Grid.Row="0" Height="2"
                  Template="{StaticResource operationTextBoxTemplate}"
                  Style="{StaticResource fragmentPresenterTextBoxStyle}"
+                 Foreground="#FF57A64A"
                  LostFocus="Fragment_LostFocus"/>
         <TextBox x:Name="contentContainer" Grid.Row="1" 
                  Template="{StaticResource contentTextBoxTemplate}"
